# mcp-hack

./: .env.production  .env.production.domain  .gitignore  DOCKER.md  EMAIL_SETUP.md  PUBLISHING.md  README-DOCKER.md  README.md  TODO.md  clear-droplet.sh  compose.production.ssl.yaml  compose.production.yaml  compose.yaml  deploy.sh  env.production.template  package-lock.json  package.json  publish-python-sdk.sh  publish-typescript-sdk.sh  setup-deployment.sh  setup-ssl.sh  start.sh  test-docker.sh  update-domain.sh  update-repo-info.sh
backend/: .env  Dockerfile  Dockerfile.production  package-lock.json  package.json  start.production.sh  start.sh  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/routes/: apikeys.ts  contact.ts  traces.ts
examples/hello-world/: Dockerfile  README.md  install_to_claude.py  main.py  minimal-server.py  pyproject.toml  server-simple.py  server.py  start.sh  test_observability.py
examples/hello-world/src/mcp_hello_world/: server.py
frontend/: .env  Dockerfile  Dockerfile.production  Dockerfile.ssl  index.html  nginx.conf  nginx.domain.conf  nginx.ssl.conf  package-lock.json  package.json  start.sh  tailwind.config.js  vite-env.d.ts  vite.config.ts
frontend/public/: README.md
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: ApiKeyManager.tsx  Dashboard.tsx  LandingPage.tsx  MetricsDashboard.tsx  ToolAnalytics.tsx  TraceDetail.tsx  (+2 more)
sdk/python/: mcp_observability.py
sdk/typescript/: README.md  mcp-observability.ts  package.json  rollup.config.js  tsconfig.json
(+5 files in other folders)
